--- a/sidebar.yaml
+++ b/sidebar.yaml
@@ -1,1 +1,17 @@
-
+- Get Started:
+  - Introduction: get-started/devin-intro.md
+  - Quickstart: get-started/quickstart.md
+  - Run: get-started/first-run.md
+- Learn about Devin:
+  - Prompts: learn-about-devin/prompting.md
+- Onboard Devin:
+  - Knowledge: onboard-devin/knowledge.md
+  - Snapshots: onboard-devin/snapshots.md
+  - Secrets: onboard-devin/secrets.md
+- Collaborate with Devin:
+  - Machine: collaborate-with-devin/machine.md
+  - Browser: collaborate-with-devin/browser.md
+  - Worklog: collaborate-with-devin/worklog.md
+- Working with Teams:
+  - MultiDevin:
+  - 
